Move currency mismatch error message under I18n
Now that we have a validation in place we should let users
change the error message in their language.

For the exception, we always print the error with English locale.

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -468,6 +468,7 @@ en:
           attributes:
             price:
               not_a_number: is not valid
+              does_not_match_order_currency: Line item price currency must match order currency!
         spree/price:
           attributes:
             currency:
